# lastroseo

./: .gitignore  Funcionalidades.md  PLAN.md  POC.md  pyproject.toml  requirements.txt
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
docs/: _POPATENDE.md
lastroseo/: __init__.py  cli.py  config.py  models.py
lastroseo/core/: analyzer.py  parser.py  serp.py  storyteller.py  writer.py
lastroseo_poc/: brand_guide.yaml  cli.py  config.py
lastroseo_poc/core/: __init__.py  analyzer.py  parser.py  storyteller.py  writer.py
v1/: .env.example  .gitignore  AGENTS.md  Makefile  docker-compose.yml  go.work  go.work.sum  init.sql
v1/api/proto/: gateway.proto
v1/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
v1/frontend/src/: App.tsx  main.tsx
v1/pkg/batchwriter/: batchwriter.go  go.mod
v1/pkg/bloom/: bloom.go  go.mod
v1/pkg/kdtree/: go.mod  kdtree.go
v1/pkg/llm/: go.mod  llm.go
v1/pkg/roaring/: bitmap.go  go.mod
v1/pkg/trie/: go.mod  trie.go
v1/pkg/unionfind/: go.mod  unionfind.go
v1/services/analytics/: AGENTS.md  Dockerfile  README.md  config.yaml  go.mod  main.go
v1/services/crawler/: AGENTS.md  Dockerfile  README.md  config.yaml  go.mod  main.go
v1/services/extractor/: AGENTS.md  Dockerfile  README.md  config.yaml  go.mod  go.sum  main.go
v1/services/gateway/: AGENTS.md  Dockerfile  README.md  competitors.go  config.yaml  go.mod  go.sum  keywords.go  main.go
v1/services/google-fetcher/: AGENTS.md  Dockerfile  README.md  config.yaml  go.mod  main.go
(+32 files in other folders)
